[package]
name = "mpl3115"
version = "0.1.0"
authors = ["Tristan Lostroh <tl8roy@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Platform-agnostic Rust driver for the MLP3115 pressure sensor."
readme = "README.md"
keywords = ["pressure", "altitude", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.2"

[profile.release]
lto = true