[package]
name = "mpl3115-test"
version = "0.1.0"
authors = ["Tristan Lostroh <tl8roy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#linux-embedded-hal = "0.3"
rppal = { version = "0.11.3", features = ["hal","hal-unproven"] }
mpl3115 = { path = ".." }

